@@ -394,7 +394,7 @@ setup_date( ofaLedgerClose *self )
 	g_return_if_fail( label && GTK_IS_LABEL( label ));
 
 	my_date_editable_init( GTK_EDITABLE( priv->closing_entry ));
-	my_date_editable_set_format( GTK_EDITABLE( priv->closing_entry ), ofa_prefs_date_display( priv->hub ));
+	my_date_editable_set_entry_format( GTK_EDITABLE( priv->closing_entry ), ofa_prefs_date_display( priv->hub ));
 	my_date_editable_set_label_format( GTK_EDITABLE( priv->closing_entry ), label, ofa_prefs_date_check( priv->hub ));
 	my_date_editable_set_overwrite( GTK_EDITABLE( priv->closing_entry ), ofa_prefs_date_overwrite( priv->hub ));
 
