@@ -308,7 +308,7 @@ setup_date( ofaPeriodClose *self )
 	g_return_if_fail( label && GTK_IS_LABEL( label ));
 
 	my_date_editable_init( GTK_EDITABLE( priv->closing_date ));
-	my_date_editable_set_format( GTK_EDITABLE( priv->closing_date ), ofa_prefs_date_display( priv->hub ));
+	my_date_editable_set_entry_format( GTK_EDITABLE( priv->closing_date ), ofa_prefs_date_display( priv->hub ));
 	my_date_editable_set_label_format( GTK_EDITABLE( priv->closing_date ), label, ofa_prefs_date_check( priv->hub ));
 	my_date_editable_set_overwrite( GTK_EDITABLE( priv->closing_date ), ofa_prefs_date_overwrite( priv->hub ));
 
